# yt-dbl

./: .coverage  .coveragerc  .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  README.md  justfile  mypy.ini  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml  release.yml
src/yt_dbl/: __init__.py  cli.py  config.py  schemas.py
src/yt_dbl/models/: __init__.py  manager.py  protocols.py  registry.py
src/yt_dbl/pipeline/: __init__.py  assemble.py  base.py  download.py  runner.py  separate.py  synthesize.py  transcribe.py  translate.py  translate_prompt.txt
src/yt_dbl/utils/: audio.py  audio_processing.py  languages.py  logging.py  memory.py
tests/: __init__.py  conftest.py  test_cli.py  test_config.py  test_model_manager.py  test_runner.py  test_schemas.py
tests/e2e/: __init__.py  conftest.py  test_e2e_download.py  test_e2e_pipeline.py  test_e2e_separate.py  test_e2e_transcribe.py
tests/integration/: __init__.py  test_cli.py  test_download.py  test_runner.py
tests/unit/: __init__.py  test_assemble.py  test_audio.py  test_audio_processing.py  test_config.py  test_logging.py  test_memory.py  test_model_manager.py  test_model_registry.py  test_pipeline_base.py  test_protocols.py  test_schemas.py  test_separate.py  test_synthesize.py  test_transcribe.py  test_translate.py
