[project]
name = "yt-dbl"
version = "0.1.0"
description = "CLI tool for YouTube video dubbing with voice cloning"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"

dependencies = [
    "typer>=0.21",
    "rich>=14.0",
    "pydantic>=2.12",
    "pydantic-settings>=2.12",
    "yt-dlp>=2026.0",
    "audio-separator[cpu]>=0.41",
]

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.19",
    "pytest>=9.0",
    "pytest-cov>=7.0",
    "pytest-randomly>=4.0",
    "pytest-xdist>=3.8",
    "pytest-timeout>=2.4",
    "pre-commit>=4.5",
]

[project.scripts]
yt-dbl = "yt_dbl.cli:app"

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_dbl"]
