[project]
name = "yt-dbl"
version = "1.0.0"
description = "CLI tool for automatic YouTube video dubbing with voice cloning (Apple Silicon)"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [
    { name = "Dmitriy Brolnitskiy", email = "brolnickij@gmail.com" },
]
keywords = ["youtube", "dubbing", "voice-cloning", "tts", "asr", "mlx", "apple-silicon", "translation"]
classifiers = [
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Multimedia :: Sound/Audio :: Speech",
    "Topic :: Multimedia :: Video",
    "Typing :: Typed",
]
dependencies = [
    "typer>=0.21.1",
    "rich>=14.3.2",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12",
    "yt-dlp>=2026.2",
    "audio-separator[cpu]>=0.41.1",
    "mlx-audio>=0.3.1; sys_platform == 'darwin'",
    "soundfile>=0.13",
    "scipy>=1.14",
    "anthropic>=0.78",
]

[project.urls]
Homepage = "https://github.com/brolnickij/yt-dbl"
Repository = "https://github.com/brolnickij/yt-dbl"
Issues = "https://github.com/brolnickij/yt-dbl/issues"

[dependency-groups]
dev = [
    "ruff>=0.15",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0",
    "pytest-randomly>=4.0.1",
    "pytest-xdist>=3.8",
    "pytest-timeout>=2.4",
    "pre-commit>=4.5.1",
]

[project.scripts]
yt-dbl = "yt_dbl.cli:app"

[build-system]
requires = ["hatchling>=1.28"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/yt_dbl"]

[tool.uv]
prerelease = "allow"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = ["src/yt_dbl/__init__.py:__version__"]
branch = "master"
build_command = "uv build"
commit_author = "github-actions <actions@github.com>"
commit_message = "chore(release): {version}"
tag_format = "v{version}"
upload_to_vcs_release = true
